themes/buttplug.io/source/css/style.css
@font-face {
    font-family: 'AllerRegular';
    src: url('/fonts/Aller_Rg.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'AllerBold';
    src: url('/fonts/Aller_Bd.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'AllerLight';
    src: url('/fonts/Aller_Lt.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

html, body {
    height: 100%;
}

body {
    background-image: url('/images/buttplug-background.svg');
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center;
    background-size: 75% 75%;
    font-family: 'AllerLight';
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'AllerRegular';
}

.pitch {
    width: 100%;
    margin: auto;
    font-family: "AllerLight";
    text-align: center;
    padding-top: .75em;
    padding-bottom: .75em;
}

.navbar-brand-svg {
    height: 60px;
    width: 60px;
    shape-rendering: "geometricPrecision";
}

.pitch {
    font-size: 16pt;
}

.frontpage-jumbotron {
    display: block;
}

.frontpage-block {
    display: none;
}

.center {
    text-align: center;
}

.page-wrap {
    min-height: 100%;
    width: 100%;
    /* equal to footer height */
    margin-bottom: -40px;
}
.page-wrap:after {
    content: "";
    display: block;
}

.site-footer {
    align-items: center;
    justify-content: center;
}

.site-footer, .page-wrap:after {
    /* .push must be the same height as footer */
    height: 30px;
}

.copyright-footer {
    text-align: center;
    font-size: 8pt;
    padding-left: 5px;
    padding-right: 5px;
}

.social-footer {
    text-align: center;
    padding-right: 5px;
    padding-left: 5px;
}

.social-footer ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

.social-footer li {
    display: inline;
    font-size: 18pt;
}

.toy-img {
    border-radius: 0px;
    background-image: url("/images/header.jpg");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    padding: 0px 5px;
}

.toy-img img {
    vertical-align: top;
    width: 100%; /* max width */
    opacity: 0;  /* make it transparent */
    max-height:150px;
}

.code-img {
    border-radius: 0px;
    background-image: url("/images/code.png");
    background-size: cover;
    background-position: center;
    padding: 0px 5px;
}

.code-img img {
    vertical-align: top;
    width: 100%; /* max width */
    opacity: 0;  /* make it transparent */
    max-height:150px;
}

.bp-img {
    border-radius: 0px;
    background-image: url("/images/squidplug.png");
    background-size: auto 100%;
    background-position: center;
    background-repeat: no-repeat;
    padding: 0px 5px;
}

.bp-img img {
    vertical-align: top;
    width: 100%; /* max width */
    opacity: 0;  /* make it transparent */
    max-height:150px;
}

.info-text {
    margin: 5px 0px;
    font-family: 'AllerLight';
}

main {
    margin-bottom: 10px;
}

.doc-list ul {
    list-style: none;
    padding: 0;
}

.doc-list ul > li > ul > li {
    margin-bottom: 10px;
    padding-left: 10px;
}

.doc-list a {
    font-family: 'AllerRegular';
}

.component {
    border-radius: 5px;
    padding: 3px;
    height: auto;
    margin: 5px;
}

.component img {
    width: 100%;
    max-width: 300;
    max-height: 300;
    text-align: center;
    padding: 15px;
}

.community {
    text-align: center;
}

.community img {
    width: 100%;
    max-width: 200px;
    max-height: 200px;
}

.community svg {
    text-align: center;
    padding: 0px 0px;
    font-size: 200px;
}

.component-title {
    font-family: 'AllerBold';
    text-align: center;
    font-size: 1.4em;
}

.component-info strong {
    font-family: 'AllerRegular';
}

.component-info {
    padding: 10px 0px;
}

/* Equally space menu items with flexbox when not using hamburger */
@media only screen and (min-width: 992px) {
    .navbar-nav-custom {
        display: flex;
        justify-content: space-between;
        width: 100%;
        margin: 0;
        padding: 0;
    }

    .navbar-nav-custom li {
        display: block;
        flex: 0 1 auto; /* Default */
        margin: 1em;
    }

    .navbar-nav-custom .nav-item a {
        font-size: 16pt;
    }

    .navbar-brand-svg {
        height: 75px;
        width: 75px;
        shape-rendering: "geometricPrecision";
    }

    .pitch {
        font-size: 20pt;
    }

    .social-footer {
        text-align: right;
    }

    .toy-img {
        border-radius: 5px;
    }

    .code-img {
        border-radius: 5px;
    }

    .frontpage-jumbotron {
        display: none;
    }

    .frontpage-block {
        display: block;
    }

    .copyright-footer {
        text-align: left;
    }
}
1

